<resources>
    <string name="app_name">Detect Project</string>
    <string name="start_detect">开始检测</string>
    <string name="data_manage">数据管理</string>
    <string name="system_set">系统设置</string>
    <string name="about_us">关于我们</string>
    <string name="splash_welcome">欢迎</string>
    <string name="project_info">工程信息: </string>
    <string name="build_serial_num">构件序号: </string>
    <string name="coordinate_info">坐标信息: </string>
    <string name="detect_time">测试时间: </string>
    <string name="back">返回</string>
    <string name="take_photo">拍照</string>
    <string name="project_info_hint">点击设置</string>
    <string name="print">打印</string>
    <string name="waveform">波形图</string>
    <string name="data">数据</string>
    //
    <string name="dialog_positive">确定</string>
    <string name="dialog_negative">取消</string>
    <string name="loading">正在加载中……</string>
    <string name="load_failed">加载失败，请点我重试</string>
    <string name="project_name">工程名称: </string>
    <string name="construction_organization">施工单位: </string>
    <string name="filler_type">填料类型: </string>
    <string name="instrument_number">仪器编号: </string>
    <string name="detect_person">检&#160;&#160;测&#160;&#160;人: </string>
    <string name="newly_build">新建</string>
    <string name="newly_build_project">新建项目</string>
    <string name="press_again">再按一次退出</string>
    <string name="confirm">确认</string>
    <string name="check_update">检测更新</string>
    <string name="s1">s1:</string>
    <string name="s2">s2:</string>
    <string name="s3">s3:</string>
    <string name="state_start">开始</string>
    <string name="cancel_detect">取消测试</string>
    <string name="print_data">打印</string>
    <string name="settings_wifi">WIFI设置: </string>
    <string name="settings_bluetooth">蓝牙设置: </string>
    <string name="settings_params">参数设置: </string>
    <string name="settings_language">语言设置: </string>
    <string name="Instrument_number">仪器编号: </string>
    <string name="curve_correction">曲线修正: </string>
    <string name="params_1">参数一: </string>
    <string name="params_2">参数二: </string>
    <string name="request_tips">应用需要用到读写权限和拍照权限，请在“设置—>权限”中打开，否则您将无法正常使用本应用</string>
    <string name="selete_time">选择时间</string>
    <string name="test_point_data">数据</string>
    <string name="test_point_pic">图像</string>
    <string name="add_pic">添加图片</string>
    <string name="out_put_data">导出</string>
    <string name="cancel">取消</string>
    <string name="remind_delete_title">是否删除该测试点</string>
    <string name="String_judge1">禁止开钱箱</string>
    <string name="String_judge2">打印前开钱箱</string>
    <string name="String_judge3">打印后开钱箱</string>
    <string name="String_judge4">禁止蜂鸣器</string>
    <string name="String_judge5">打印前蜂鸣器响</string>
    <string name="String_judge6">打印后蜂鸣器响</string>
    <string name="printerName">设备名称:未连接</string>
    <string name="printerAddress">设备地址:未连接</string>
    <string name="settingactivitty_toast_bluetooth_set_tspl_successful">蓝牙方式TSPL指令设置成功</string>
    <string name="settingactivity_toast_usb_set_tspl_succefful">USB方式TSPL指令设置成功</string>
    <string name="conn_failed">连接失败</string>
    <string name="conn_closed">连接关闭</string>
    <string name="conn_no">没有可连接的设备</string>
    <string name="has_paired">已配对</string>
    <string name="not_paired">未配对</string>
    <string-array name="interface_type">
        <item>Bluetooth</item>
        <item>USB</item>
        <item>Wifi</item>
        <item>Serial port</item>
    </string-array>

</resources>
