<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/size_10dp"
        android:paddingLeft="@dimen/size_20dp"
        android:paddingRight="@dimen/size_20dp"
        android:paddingTop="@dimen/size_20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/project_info"
            android:textSize="@dimen/size_20sp" />

        <EditText
            android:id="@+id/project_info_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/size_10dp"
        android:paddingLeft="@dimen/size_20dp"
        android:paddingRight="@dimen/size_20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/build_serial_num"
            android:textSize="@dimen/size_20sp" />

        <EditText
            android:id="@+id/build_serial_num_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/size_10dp"
        android:paddingLeft="@dimen/size_20dp"
        android:paddingRight="@dimen/size_20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/coordinate_info"
            android:textSize="@dimen/size_20sp" />

        <EditText
            android:id="@+id/coordinate_info_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/size_10dp"
        android:paddingLeft="@dimen/size_20dp"
        android:paddingRight="@dimen/size_20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/detect_time"
            android:textSize="@dimen/size_20sp" />

        <EditText
            android:id="@+id/detect_time_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/size_20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/back_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/back"
            android:textSize="@dimen/size_20sp" />
        <TextView
            android:id="@+id/take_photo_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/take_photo"
            android:textSize="@dimen/size_20sp" />

        <TextView
            android:id="@+id/print_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/print"
            android:textSize="@dimen/size_20sp" />

    </LinearLayout>
</LinearLayout>