<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_bottom"
    android:gravity="center"
    android:padding="@dimen/size_10dp">

    <TextView
        android:id="@+id/title_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_10dp"
        android:text="提示"
        android:textColor="@color/black"
        android:textSize="@dimen/size_15sp" />

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_tv1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_12dp"
        android:text="@string/remind_delete_title"
        android:textColor="@color/black"
        android:textSize="@dimen/size_14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/confirm_bt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:textSize="@dimen/size_14sp" />

        <Button
            android:id="@+id/cancel_bt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="@dimen/size_14sp" />

    </LinearLayout>
</RelativeLayout>