<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/size_60dp"
    android:layout_marginRight="@dimen/size_60dp"
    android:layout_marginTop="@dimen/size_5dp"
    android:orientation="vertical">

    <include layout="@layout/common_title" />

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-15dp"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/size_5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/project_name"
            android:textSize="@dimen/size_15sp" />

        <EditText
        android:id="@+id/project_name_et"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="start"
        android:imeOptions="actionNext"
        android:singleLine="true" />

        <!--<Spinner-->
            <!--android:id="@+id/project_name_sp"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="start"-->
            <!--android:imeOptions="actionNext"-->
            <!--android:singleLine="true" />-->
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/size_5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/construction_organization"
            android:textSize="@dimen/size_15sp" />

        <EditText

            android:id="@+id/construction_organization_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:imeOptions="actionNext"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/size_5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/filler_type"
            android:textSize="@dimen/size_15sp" />

        <EditText
            android:id="@+id/filler_type_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:imeOptions="actionNext"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/size_5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/instrument_number"
            android:textSize="@dimen/size_15sp" />

        <EditText
            android:id="@+id/instrument_number_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:imeOptions="actionNext"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/detect_person"
            android:textSize="@dimen/size_15sp" />

        <EditText
            android:id="@+id/detect_person_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:imeOptions="actionDone"
            android:singleLine="true" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/newly_build_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_40dp"
            android:gravity="center"
            android:src="@drawable/shape_bottom_corners"
            android:text="@string/newly_build"
            android:textSize="@dimen/size_15sp" />


        <Button
            android:id="@+id/confirm_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/size_40dp"
            android:gravity="center"
            android:src="@drawable/shape_bottom_corners"
            android:text="@string/confirm"
            android:textSize="@dimen/size_15sp" />

    </RelativeLayout>
</LinearLayout>