<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/size_120dp"
    android:layout_marginBottom="@dimen/size_120dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="@dimen/size_20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        tools:ignore="Suspicious0dp">

        <TextView
            android:layout_marginEnd="@dimen/size_10dp"
            android:background="@drawable/shape_button_corners"
            android:id="@+id/start_detect_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/start_detect"
            android:textColor="@android:color/black"
            android:textSize="@dimen/size_18sp" />

        <TextView
            android:layout_marginStart="@dimen/size_10dp"
            android:background="@drawable/shape_button_corners"
            android:id="@+id/data_manage_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/data_manage"
            android:textColor="@android:color/black"
            android:textSize="@dimen/size_18sp" />
    </LinearLayout>

    <LinearLayout
        android:padding="@dimen/size_20dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        tools:ignore="Suspicious0dp">

        <TextView
            android:layout_marginEnd="@dimen/size_10dp"
            android:background="@drawable/shape_button_corners"
            android:gravity="center"
            android:id="@+id/system_set_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/system_set"
            android:textColor="@android:color/black"
            android:textSize="@dimen/size_18sp" />

        <TextView
            android:layout_marginStart="@dimen/size_10dp"
            android:background="@drawable/shape_button_corners"
            android:gravity="center"
            android:id="@+id/about_us_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/about_us"
            android:textColor="@android:color/black"
            android:textSize="@dimen/size_18sp" />
    </LinearLayout>


</LinearLayout>
