<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/size_60dp"
    android:layout_marginRight="@dimen/size_60dp"
    android:layout_marginTop="@dimen/size_10dp"
    android:orientation="vertical">

    <include layout="@layout/common_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/size_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/settings_wifi"
            android:textSize="@dimen/size_18sp" />

        <EditText
            android:id="@+id/settings_wifi_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="41"
            android:gravity="start"
            android:imeOptions="actionNext"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/size_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/settings_bluetooth"
            android:textSize="@dimen/size_18sp" />

        <EditText
            android:id="@+id/settings_bluetooth_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start"
            android:imeOptions="actionNext"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/size_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/instrument_number"
            android:textSize="@dimen/size_18sp" />

        <EditText
            android:id="@+id/instrument_number_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start"
            android:imeOptions="actionNext"
            android:singleLine="true" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/settings_language"
            android:textSize="@dimen/size_18sp" />

        <EditText
            android:id="@+id/settings_language_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start"
            android:imeOptions="actionNext"
            android:singleLine="true" />
    </LinearLayout>

    <Button
        android:paddingRight="@dimen/size_10dp"
        android:paddingLeft="@dimen/size_10dp"
        android:layout_marginTop="@dimen/size_10dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/check_update_bt"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:src="@drawable/shape_bottom_corners"
        android:text="@string/check_update"
        android:textSize="@dimen/size_15sp" />
</LinearLayout>